syntax = "proto3";

/* Copyright 2022 Danny McClanahan */
/* SPDX-License-Identifier: AGPL-3.0-only */

package emdocs.proto.messages;

import "buffers.proto";
import "transforms.proto";

/* A modification to the universe. */
message Operation {
  /* The buffer to transform. */
  optional emdocs.proto.buffers.BufferId source = 1;
  /* The transform to perform. */
  optional emdocs.proto.transforms.Transform transform = 2;
}

message OperationResult {
  oneof type {
    OkResult ok = 1;
  }
}

message RemoteClient {
  optional string ip_address = 1;
}

message BufferAssociation {
  optional emdocs.proto.buffers.BufferId buffer_id = 1;
  optional RemoteClient remote = 2;
}

/* A command from an IDE. */
message IDEMessage {
  oneof type {
    Operation op = 1;
    BufferAssociation link = 2;
  }
}

message OkResult {}

message ClientMessage {
  oneof type {
    OkResult ok = 1;
    Operation op = 2;
  }
}
